<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HealthySmile</string>
    <string name="tipo_usuario_paciente">Paciente</string>
    <string name="tipo_usuario_especialista">Especialista</string>
    <string name="tipo_usuario_administrador">Administrador</string>
    <string name="accion_tipo_usuario_paciente_1">Acción1</string>
    <string name="accion_tipo_usuario_paciente_2">Acción2</string>
    <string name="accion_tipo_usuario_especialista_1">Acción1</string>
    <string name="accion_tipo_usuario_especialista_2">Acción2</string>
    <string name="opcion_combo_especialidad_selecciona_tu_especialidad">Selecciona tu especialidad</string>
    <string name="opcion_combo_especialidad_odontologia_general">Odontología General</string>
    <string name="opcion_combo_especialidad_ortodoncia">Ortodoncia</string>
    <string name="opcion_combo_especialidad_periodoncia">Periodoncia</string>
    <string name="opcion_combo_especialidad_endodoncia">Endodoncia</string>
    <string name="opcion_combo_especialidad_cirugia_bucal">Cirugía Bucal</string>
    <string name="opcion_combo_especialidad_implantologia">Implantología</string>
    <string name="opcion_combo_especialidad_odontopediatria">Odontopediatría</string>
    <string name="opcion_combo_especialidad_odontologia_estetica">Odontología Estética</string>
    <string name="opcion_combo_especialidad_prostodoncia">Prostodoncia</string>
    <string name="opcion_combo_especialidad_radiologia_oral_y_maxilofacial">Radiología Oral y Maxilofacial</string>
    <string name="opcion_combo_especialidad_medicina_oral">Medicina Oral</string>
    <string name="opcion_combo_especialidad_patologia_oral">Patología Oral</string>
    <string name="opcion_combo_especialidad_odontologia_forense">Odontología Forense</string>
    <string name="opcion_combo_especialidad_odontologia_geriatrica">Odontología Geriátrica</string>
    <string name="opcion_combo_especialidad_odontologia_preventiva">Odontología Preventiva</string>
    <string name="opcion_combo_especialidad_terapia_orofacial">Terapia Orofacial</string>
    <string name="opcion_combo_especialidad_oclusion">Oclusión</string>
    <string name="opcion_combo_especialidad_sistemas_dentales_digitales">Sistemas Dentales Digitales</string>
    <string name="opcion_combo_especialidad_higiene_dental">Higiene Dental</string>
    <string name="label_menu_inicio">Inicio</string>
    <string name="label_menu_educaciondental">Educacion Dental</string>
    <string name="label_menu_tiendavirtual">Tienda virtual</string>
    <string name="label_menu_gestiondeadministrador">Gestion</string>
    <string name="label_menu_ayudaysoporte">Ayuda y Soporte</string>
    <string name="label_menu_consultavirtual">Consulta virtual</string>
    <string name="label_menu_logout">Logout</string>
    <string name="label_menu_consultavirtualespecialista">Especialista</string>
    <string name="label_menu_configuracion">Configuracion</string>
    <string name="label_menu_fragment_gingivitis">Gingivitis</string>
    <string name="label_menu_fragment_caries_dental" >Caries Dental</string>
    <string name="label_menu_fragment_cancer_bucal" >Cancer Bucal</string>
    <string name="label_menu_fragment_traumatismos_bucodentales" >Traumatismos Bucodentales</string>
    <string name="label_menu_fragment_traumatismos_halitosis" >Halitosis</string>
    <string name="label_menu_fragment_traumatismos_sensibilidad_dental">Sensibilidad dental</string>
    <string name="label_menu_fragment_traumatismos_implantes">Implantes</string>
    <string name="label_menu_fragment_traumatismos_periodontitis">Periodontitis</string>
    <string name="texto_boton_paciente">paciente</string>
    <string name="texto_boton_especialista">especialista</string>
    <string name="texto_boton_iniciarsesion">Iniciar sesion</string>
    <string name="texto_boton_guardar">Guardar</string>
    <string name="texto_boton_cancelar">Cancelar</string>
    <string name="texto_boton_pedir_consulta">Pedir consulta</string>
    <string name="texto_boton_registrarse">Registrarse</string>
    <string name="texto_boton_enviar">Enviar</string>
    <string name="texto_boton_chatbot">Chatbot</string>
    <string name="texto_boton_agendarcita">Agendar cita</string>
    <string name="texto_boton_historialdental">Historial dental</string>
    <string name="texto_boton_crear">Crear</string>
    <string name="texto_boton_obtener_ayuda">Obtener ayuda</string>
    <string name="texto_boton_verificar">Verificar</string>
    <string name="texto_campo_nombre">Nombre</string>
    <string name="texto_campo_correo">Email</string>
    <string name="texto_campo_mensaje">Mensaje</string>
    <string name="texto_hint_correo_electronico">Correo electronico</string>
    <string name="texto_hint_contraseña">Contraseña</string>
    <string name="texto_hint_campo_nombre">Nombre de usuario</string>
    <string name="texto_hint_campo_correo">Ingresa un correo</string>
    <string name="texto_hint_campo_mensaje">Deja tu mensaje</string>
    <string name="texto_hint_enviar_mensaje">Escribe un mensaje</string>
    <string name="texto_hint_cedulaprofesional">Cedula profesional</string>
    <string name="texto_hint_descripcion">Descripcion</string>
    <string name="texto_hint_motivo_cita">Motivo cita</string>
    <string name="texto_hint_formato_fecha">(YY:MM:DD)</string>
    <string name="texto_hint_codigo_verificacion">Codigo de verificacion</string>
    <string name="titulo_toolbar_configuracion">Configuracion</string>
    <string name="titulo_bienvenida">Bienvenido a</string>
    <string name="texto_que_deseas_hacer_hoy">¿Que deseas hacer hoy?</string>
    <string name="texto_quieres_registrate_como">¿Quieres registrarte como?</string>
    <string name="texto_ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="titulo_fragment_home_healthy_smile">Healthy \n Smile</string>
    <string name="texto_fragment_home_titulo_healthy_smile">El futuro del cuidado dental se acerca rápidamente, marcando el comienzo de una nueva era de innovacion digital y transformacion en la salud bucal</string>
    <string name="texto_verificacion_tiempo_restante">Tiempo restante para verificacion : </string>
    <string name="titulo_sign_up_paciente_registropaciente">Registro paciente</string>
    <string name="titulo_sign_up_paciente_registroespecialista">Registro especialista</string>
    <string name="titulo_ayudaysoporte_consultorio_part1">Consultorio</string>
    <string name="titulo_ayudaysoporte_consultorio_part2">de servicio</string>
    <string name="titulo_ayudaysoporte_consultorio_part3">completo</string>
    <string name="titulo_preguntas_frecuentes">Preguntas frecuentes</string>
    <string name="titulo_contactenos">Contáctenos</string>
    <string name="subtitulo_citas">Citas</string>
    <string name="texto_descripcion_preguntas_frecuentes">encuentra respuestas a las preguntas más comunes sobre nuestros servicios. Si no ves tu pregunta aquí, envianosla y con gusto te atenderemos</string>
    <string name="titulo_consulta_virtual_consultorio_digital">Consultorio \n Digital</string>
    <string name="titulo_consulta_consulta_part1">Consultorio</string>
    <string name="titulo_consulta_consulta_part2">de servicio</string>
    <string name="titulo_consulta_consulta_part3">completo</string>
    <string name="titulo_consulta_nuestrosservicios">Nuestros servicios</string>
    <string name="texto_plantilla_especialista_list_chat_ejemplo_nombre_especialista">Ejemplo nombre Especialista</string>
    <string name="texto_plantilla_especialista_list_chat_ejemplo_especialidad_especialista">Ejemplo especialidad Especialista</string>
    <string name="texto_plantilla_especialista_list_chat_ejemplo_descripcion_especialista">Ejemplo descripcion Especialista</string>
    <string name="texto_plantilla_paciente_list_chat_ejemplo_nombre_paciente">Ejemplo nombre Paciente</string>
    <string name="texto_plantilla_paciente_list_chat_ejemplo_correo_paciente">Ejemplo correo Paciente</string>
    <string name="texto_plantilla_informacion_especialista_nombre">German Castelazo Rico</string>
    <string name="texto_plantilla_informacion_especialista_especialidad">Especialidad</string>
    <string name="texto_plantilla_informacion_especialista_cedula">Cedula : 12345678</string>
    <string name="texto_plantilla_informacion_especialista_descripcion">Este es un ejemplo de como se va acomodando la descripcion de un espacialista asi bien papulince cwn</string>
    <string name="desplegado_pregunta_frecuente_texto_respuesta">Respuesta</string>
    <string name="desplegado_pregunta_frecuente_texto_escriba_la_respuesta">Escriba la respuesta</string>
    <string name="content_description_imagen_diente_inicio">Imagen central al iniciar la aplicación</string>
    <string name="content_description_imagen_photo_perfil_especialista_default">Foto de perfil predeterminada para el especialista</string>
    <string name="content_description_imagen_photo_perfil_paciente_default">Foto de perfil predeterminada para el paciente</string>
    <string name="content_description_imagen_foto_perfil_especialista">Esta imagen contiene la foto de perfil del especialista o la predeterminada en caso de no tener</string>
    <string name="content_description_imagen_foto_perfil_paciente">Esta imagen contiene la foto de perfil del paciente o la predeterminada en caso de no tener</string>
    <string name="content_description_imagen_arrow_back">Flecha para retroceder una accion</string>
    <string name="content_description_imagen_fondo_preguntas_frecuentes">Esta imagen es el fondo principal del fragmento preguntas frecuentes</string>
    <string name="content_description_imagen_preguntas_frecuentes">Esta imagen se encuentra encima de las preguntas frecuentes</string>
    <string name="content_description_imagen_enviar_pregunta_frecuente">Esta imagen se encuentra encima del formulario para pregunta frecuente</string>
    <string name="content_description_boton_enviar_mensaje">Boton para enviar mensaje</string>
    <string name="content_description_imagen_fondo_consulta_virtual_init">Esta imagen es el fondo principal del fragmento consulta virtual init</string>
    <string name="content_description_imagen_opcion_chatbot">Esta imagen es para la opcion del chatbot</string>
    <string name="content_description_imagen_opcion_especialista">Esta imagen es para la opcion del chat</string>
    <string name="content_description_imagen_opcion_agendar_cita">Esta imagen es para la opcion de citas</string>
    <string name="content_description_imagen_opcion_historial_dental">Esta imagen es para la opcion del historial de citas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer_fragments">NavigationDrawerFragments</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>