<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/label_menu_inicio" />
        <item
            android:id="@+id/nav_ConsultaVirtual"
            android:icon="@drawable/icon_educacion_dental"
            android:title="@string/label_menu_consultavirtual" />
        <item
            android:id="@+id/nav_EducacionDental"
            android:icon="@drawable/icon_educacion_dental"
            android:title="@string/label_menu_educaciondental" />
        <item
            android:id="@+id/nav_TiendaVirutal"
            android:icon="@drawable/icon_tienda_virtual"
            android:title="@string/label_menu_tiendavirtual" />
        <item
            android:id="@+id/nav_gestionAdmin"
            android:icon="@drawable/icon_home"
            android:title="@string/label_menu_gestiondeadministrador"/>
        <item
            android:id="@+id/nav_ayudaYSoporte"
            android:icon="@drawable/icon_ayuda_y_soporte"
            android:title="@string/label_menu_ayudaysoporte" />
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/icon_log_out"
                android:title="@string/label_menu_logout"/>
        </menu>
    </item>
</menu>