<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.healthysmile.ui.home.HomeFragment"
        android:label="@string/label_menu_inicio"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_ayudaYSoporte"
        android:name="com.example.healthysmile.fragment_ayuda_y_soporte"
        android:label="@string/label_menu_ayudaysoporte"
        tools:layout="@layout/fragment_ayuda_y_soporte" />

    <fragment
        android:id="@+id/nav_ConsultaVirtual"
        android:name="com.example.healthysmile.fragment_cosulta_virtual_init"
        android:label="@string/label_menu_consultavirtual"
        tools:layout="@layout/fragment_cosulta_virtual_init" >
        <!-- Acción para navegar al fragmento especialista -->
        <action
            android:id="@+id/action_fragment_cosulta_virtual_init_to_fragment_consulta_virtual_especialista"
            app:destination="@id/fragment_consulta_virtual_especialista" />
    </fragment>

    <fragment
        android:id="@+id/fragment_consulta_virtual_especialista"
        android:name="com.example.healthysmile.fragment_consulta_virtual_especialista"
        android:label="@string/label_menu_consultavirtualespecialista"
        tools:layout="@layout/fragment_consulta_virtual_especialista" />

</navigation>
