<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_ayuda_y_soporte">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:src="@drawable/sp3"
                    android:scaleType="centerInside" />

                <LinearLayout
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/custom_tittle_text_consultas"
                    android:backgroundTint="@color/white"
                    android:orientation="vertical"
                    android:padding="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titulo_ayudaysoporte_consultorio_part1"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titulo_ayudaysoporte_consultorio_part2"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titulo_ayudaysoporte_consultorio_part3"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/subtitulo_citas"
                        android:textColor="@color/black"
                        android:textSize="6dp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_button_white_background"
                        android:padding="10dp"
                        android:text="@string/texto_boton_pedir_consulta"
                        android:textColor="@color/black"
                        android:elevation="4dp"
                        android:textSize="10dp" />
                </LinearLayout>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:src="@drawable/sp2"
                    android:scaleType="centerCrop" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titulo_preguntas_frecuentes"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/texto_descripcion_preguntas_frecuentes"
                        />
                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/background_linear_ayuda_y_soporte"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="175dp"
                        android:layout_height="300dp"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="end"
                        android:src="@drawable/sp1"
                        android:scaleType="centerCrop" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="40dp"
                    android:padding="20dp"
                    android:background="@drawable/background_form_frecuent_question"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Contactenos"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/texto_campo_nombre"/>
                    <EditText
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:padding="8dp"
                        android:hint="@string/texto_hint_campo_nombre"
                        android:textColor="@color/color_text"
                        android:inputType="text"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/texto_campo_correo"/>
                    <EditText
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:padding="8dp"
                        android:hint="@string/texto_hint_campo_correo"
                        android:textColor="@color/color_text"
                        android:inputType="text"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/texto_campo_mensaje"/>
                    <EditText
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:padding="8dp"
                        android:hint="@string/texto_hint_campo_mensaje"
                        android:textColor="@color/color_text"
                        android:inputType="text"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/texto_boton_registrarse"
                        android:textSize="18sp"
                        android:textColor="@color/color_text"
                        android:backgroundTint="@color/color_principal_clarote" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>