<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/color_formulario_background_tint_card_view">

    <ImageView
        android:id="@+id/plantillaListaEspecialistaFotoPerfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/default_photo_perfil_especialista"
        android:background="@drawable/custom_circle_image"
        android:scaleType="centerCrop"
        android:clipToOutline="true"
        tools:ignore="UnusedAttribute"
        android:contentDescription="@string/content_description_imagen_foto_perfil_especialista"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/plantillaListaEspecialistaNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_plantilla_especialista_list_chat_ejemplo_nombre_especialista"
            android:textSize="15sp"
            android:textColor="@color/color_comun_text"/>
        <TextView
            android:id="@+id/plantillaListaEspecialistaEspecialidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_plantilla_especialista_list_chat_ejemplo_especialidad_especialista"
            android:textSize="11sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/color_comun_text"/>
        <TextView
            android:id="@+id/plantillaListaEspecialistaDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_plantilla_especialista_list_chat_ejemplo_descripcion_especialista"
            android:textSize="11sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/color_comun_text"/>
    </LinearLayout>
</LinearLayout>
