<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clipToPadding="false"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="8dp"
    card_view:cardBackgroundColor="@color/color_formulario_background_tint_card_view">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:id="@+id/plantillaHomeFotoEspecialista"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/default_photo_perfil_especialista"
            android:background="@drawable/custom_circle_image"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            android:contentDescription="@string/content_description_imagen_foto_perfil_especialista"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="13dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/plantillaHomeNombreEspecialista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_plantilla_informacion_especialista_nombre"
                android:gravity="center"
                android:textColor="@color/color_comun_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/plantillaHomeEspecialidadEspecialista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_plantilla_informacion_especialista_especialidad"
                android:gravity="center"
                android:textColor="@color/color_comun_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/plantillaHomeCedulaEspecialista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/texto_plantilla_informacion_especialista_cedula"
                android:textColor="@color/plantilla_informacion_especialista_cedula_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/plantillaHomeDescripcionEspecialista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/color_comun_text"
                android:text="@string/texto_plantilla_informacion_especialista_descripcion" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
