<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_init2"
    tools:context=".InitAplication">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_bienvenida_healthySmile"
        android:textSize="24dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/color_text"
        android:layout_marginTop="120dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_que_deseas_hacer_hoy"
        android:textSize="15dp"
        android:gravity="center"
        android:textColor="@color/color_text"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_boton_paciente"
            android:textColor="@color/white"
            android:backgroundTint="@color/color_principal_clarote"
            android:id="@+id/initAppBtnSignUpPaciente"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_boton_especialista"
            android:textColor="@color/white"
            android:backgroundTint="@color/color_principal_clarote"
            android:id="@+id/initAppBtnSignUpEspecialista"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_boton_iniciarsesion"
            android:textColor="@color/white"
            android:backgroundTint="@color/color_principal_clarote"
            android:id="@+id/initAppBtnLogin"/>

    </LinearLayout>

</LinearLayout>