<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/color_formulario_background_tint_card_view">
        <ImageView
            android:id="@+id/plantillaListaPacienteFotoPerfil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/default_photo_perfil_paciente"
            android:background="@drawable/custom_circle_image"
            android:scaleType="centerCrop"
            android:contentDescription="@string/content_description_imagen_foto_perfil_paciente"
            android:clipToOutline="true"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/plantillaListaPacienteNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_plantilla_paciente_list_chat_ejemplo_nombre_paciente"
                android:textSize="15sp"
                android:textColor="@color/color_comun_text"/>
            <TextView
                android:id="@+id/plantillaListaPacienteCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_plantilla_paciente_list_chat_ejemplo_correo_paciente"
                android:textSize="11sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/color_comun_text"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>